force-app/main/default/objects/Job_Position__c/fields/Close_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_c__c</fullName>
    <label>Close_Date__c</label>
    <type>Date</type>
</CustomField>