force-app/main/default/objects/Job_Position__c/fields/Location_c__c.field-meta.xml
<CustomField>
    <fullName>Location_c__c</fullName>
    <label>Location__c</label>
    <length>100</length>
    <type>Text</type>
</CustomField>