force-app/main/default/objects/Job_Position__c/fields/Open_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Open_Date_c__c</fullName>
    <label>Open_Date__c</label>
    <type>Date</type>
</CustomField>