force-app/main/default/objects/Job_Position__c/fields/Openings_c__c.field-meta.xml
<CustomField>
    <fullName>Openings_c__c</fullName>
    <label>Openings__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>