force-app/main/default/objects/Job_Position__c/fields/Posting_Description_c__c.field-meta.xml
<CustomField>
    <fullName>Posting_Description_c__c</fullName>
    <label>Posting_Description__c</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>