force-app/main/default/objects/Job_Position__c/fields/Skills_Required_c__c.field-meta.xml
<CustomField>
    <fullName>Skills_Required_c__c</fullName>
    <label>Skills_Required__c</label>
    <type>TextArea</type>
</CustomField>