force-app/main/default/objects/Job_Position__c/recordTypes/Full_Time.recordType-meta.xml
<RecordType>
    <fullName>Full_Time</fullName>
    <active>true</active>
    <description>Full time positions</description>
    <label>Full-Time</label>
</RecordType>