force-app/main/default/objects/Job_Position__c/recordTypes/Internship.recordType-meta.xml
<RecordType>
    <fullName>Internship</fullName>
    <active>true</active>
    <description>Internship positions</description>
    <label>Internship</label>
</RecordType>